# backend/src/modules/metrics/metrics.router.ts
@@ -1,0 +1,9 @@
+import { Router } from 'express';
+import { MetricsController } from './metrics.controller';
+
+const router = Router();
+const controller = new MetricsController();
+
+router.get('/:id', controller.getMetrics);
+
+export default router;
